--- a/Frontend-react/src/App.css
+++ b/Frontend-react/src/App.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   background: #ececec;/* Color de fondo general de la página */
   font-family: sans-serif;
+  height: 100%; 
+  
 }
 * {
   box-sizing: border-box;
@@ -11,6 +13,7 @@ body {
 
 /* === HEADER === */
 .header {
+  height: 60px;
   width: 100%;
   display: flex;      /* coloca logo y menú en fila */
   justify-content: space-between;   /* logo a la izquierda de la pagina, menú a la derecha */
@@ -111,21 +114,32 @@ body {
   background: rgba(255,255,255,0.2);
 }
 
-/* === CONTENIDO === */
-main {
-  padding: 60px 60px 0px; /* modificar el espacio de arriba debajo del header */
-  flex: 1; 
-  min-height: 85vh;
+.page {
+  display: flex;
+  flex-direction: column;
 }
 
-.titulo {
+.content {
+  min-height: 71vh;
+  margin-top: 90px;
+  flex: 1; /* ocupa el espacio disponible */
+  padding: 0px;
+}
+
+/* === CONTENIDO === */
+main {
+  margin: 0px 30px;               
+  flex: 1;             
+}
+
+.titulo  {
   width: 250px;
+  margin: 0px 60px;
   border-radius: 12px ;
   background-color: #cd9930;
   padding: 3px 20px;
   font-family: 'Segoe UI';
   text-align: left;
-  margin: 50px 50px;
   font-size: 20px;
 }
 
@@ -136,21 +150,33 @@ main {
   gap: 20px;
 }
 
+/* Ajuste responsive */
+@media (max-width: 1024px) {
+  .articles {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  .articles {
+    grid-template-columns: 1fr;
+  }
+}
+
 .card {
   background: #fff;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 2px 6px rgba(0,0,0,0.35);
-  display: flex;
-  flex-direction: column;
   position: relative; /* Eso hace que el icono basurita que tiene "position: absolute" usen la card como referencia al estar dentro de ella, en lugar de usar toda la página. */
+  margin-top: 40px;
 }
 
 .preview .card {
+  margin: 0 40px ;
   background: #fff; /* fondo blanco */
-  border-radius: 12px;
+  border-radius: 20px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.25); /* sombra suave */
-  padding: 16px;
 }
 
 .card img {
@@ -161,10 +187,9 @@ main {
 }
 
 .preview h2 {
-  font-weight: 100;
+  font-weight: 400;
   font-size: 20px;
-  margin-bottom: 40px;
-  margin-top: 60px;
+  margin-bottom: 20px;
 }
 
 .preview .card .info {
@@ -172,21 +197,21 @@ main {
   display: flex;
   flex-direction: column;
   text-align: left;
-  padding-left: 0px;
 }
 
 .preview .card .info h3 {
+  font-weight: bolder;
   margin-top: 20px;
   margin-bottom: 6px;
 }
 
 .preview .card .info p {
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
 }
 
 .card .info {
-  padding: 1px 15px;
+  padding: 1px 22px;
 }
 
 .card .info h3 {
@@ -213,81 +238,141 @@ main {
 }
 
 /* === FORMULARIO === */
-.formulario {
+.form-page {   
+  flex: 1;      
+  display: flex; 
+  justify-content: center; 
+  align-items: normal;   
+  background: #eee;  
+  padding: 20px;       
+  box-sizing: border-box;
+}
+.formulario{
+  margin-top: 30px;
+  width: 450px;
   display: flex;
   flex-direction: column;
-  max-width: 400px;
-  margin: 90px auto;
-  gap: 12px;
+  gap: 13px;
+  background: #e4e1e1;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.formInput::placeholder {
+  font-style: italic;
+  font-family:'Segoe UI';
+  color: #999;
+}
+
+.formInput {
+  font-family: sans-serif;
+  padding: 12px;
+  border: 1px solid #e4e3e3;
+  border-radius: 10px;
+  font-size: 13px;
+  color: #616161;
+}
+
+.formInput:focus{
+  outline: none;   
+  transition: 0,1s;
+  border-color: #c9c7c7;
 }
 
 .formulario h2 {
-  margin-top: 800px;
-  margin: auto;
+  margin: 0 0 20px 0;
+  margin: 0 auto;
 }
 
-.formulario input,
-.formulario textarea {
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  font-size: 14px;
-}
-
-button {
-  background: #d29d2b;
-  margin-top: 20px;
-  margin-left: 25px;
+.guardar {
+  width: 100%;
+  background: #cd9930;
+  margin-top: 10px ;
   color: white;
-  padding: 12px 40px;
+  padding: 12px 50px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
   font-size: 15px;
 }
 
-button:hover {
-  background: #b3811d;
-}
-
-.guardar {
-  margin: 20px auto 0; 
-  width: 400px; 
+.guardar:hover {
+  background: #be8d2c;
 }
 
 .preview {
-  max-width: 400px;
-  margin: 40px auto;
+  padding: 0px 0px;
+  max-width: 500px;
   text-align: center;
+  margin:  auto;
 }
 
 /* === Estilos para la card de vista previa ==== */
 .preview .card img {
-  height: 160px; /* tamaño más grande de tarjeta para vista previa */
-  object-fit: cover;
   width: 100%;
+  height: 260px; /* tamaño más grande de tarjeta para vista previa */
+  object-fit: cover;
   border-radius: 12px 12px 0 0;
 }
 
+.contenedorBtnPreview{
+  width: 420px;
+  display: flex;       /* los botones estarán uno al lado del otro */
+  justify-content: center;
+  gap: 28px;           /* espacio entre ellos */
+  align-items: center;
+  margin: 20px 40px;
+  margin-bottom: 15px;
+  background: #c6cbd3 ;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+.prevConfirm{
+  background-color: #2ecc71;
+}
+
+.prevBack{  
+  background: #4b586b;
+}
+
+.prevBorrar{
+  background: #ed2e2a;
+}
+
+.botonesPreview{
+  font-weight: bold;
+  border-radius: 8px;
+  border: none;
+  color: white;
+  font-size: 15px;
+  padding: 9px 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
 /* === FOOTER === */
-footer {
-  background: #f9e4a6;
+footer { 
+  margin-top: 37px;
+  width: 100%;
+  background: #d1942b;
   padding: 20px;
-  color: #555;
+  color: #fff;
   text-align: center;
   font-size: 14px;
-  margin-top: 30px;
   box-shadow: 0 -2px 6px rgba(0, 0, 1, 0.1); /* sombra hacia arriba */
 }
 
 /* Estilos de el aviso de exito al guardar articulo */
 .toast {
   position: fixed;
-  top: 10%;
+  top: 8%;
   left: 35%;
   background: #2ecc71; /* verde suave */
   color: white;
-  padding: 32px 30px;
+  padding: 22px 30px;
   border-radius: 8px;
   font-weight: bold;
   box-shadow: 0 4px 10px rgba(0,0,0,0.15);
@@ -305,6 +390,10 @@ footer {
 
  /* Este es el aviso de que se borro el articulo */
 .alert.success {
+  z-index: 9999;
+  position: fixed;
+  top: 8%;
+  left: 45%;
   background-color: #ee3f3f; 
   color:  #f6f6f6;       
   animation: fadeInOut 3s ease forwards;
@@ -314,10 +403,7 @@ footer {
   width: fit-content;
   text-align: center;
   font-weight: bold;
-  transition: opacity 0.8s ease-out;
-  position: fixed; 
-  top: 40%;
-  left: 45%;
+  transition: opacity 0.4s ease-out;
   /* "position: fixed; top: 40%; left: 30%;" Estos 3 ultimos me acomodan el mensaje donde yo quiera cambiando el porcentaje */
 }
 
@@ -336,34 +422,38 @@ footer {
   color: #888; /* un poco más fuerte al pasar el mouse */
 }
 
-/* === VISTA DETALLE  === */
+/* === VISA DETALLE  === */
 .detail {
-  min-height: 100vh;
+  padding: 30px;       
   display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 40px;
+  justify-content: center;  
   background: linear-gradient(180deg, #f6f7f8 0%, #ececec 100%);
 }
 
 .detail-card {
-  width: 920px;
-  max-width: 96%;
+  width: 950px;             /* un poco más compacta */
+  max-width: 95%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 24px;
+  gap: 20px;
   background: #fff;
   border-radius: 14px;
-  box-shadow: 0 18px 50px rgba(12, 20, 31, 0.12);
+  box-shadow: 0 12px 30px rgba(12, 20, 31, 0.12);
   overflow: hidden;
+  max-height: 500px;        /* limita el alto */
 }
 
-.detail-left { background: #f8f8f9; display:flex; align-items:center; justify-content:center; }
+.detail-left {
+  background: #f8f8f9; 
+  display:flex; 
+  align-items:center; 
+  justify-content:center; 
+}
+
 .detail-image {
   width: 100%;
   height: 100%;
   max-height: 520px;
-  object-fit: cover;
 }
 
 .detail-right {
@@ -378,7 +468,13 @@ footer {
   color: #1f2937;
 }
 
-.detail-meta { display:flex; gap:12px; align-items:center; margin-top:5px; }
+.detail-meta { 
+  display:flex; 
+  gap:12px; 
+  align-items:center; 
+  margin-top:5px; 
+}
+
 .price {
   background: rgba(201,149,37,0.08);
   color: #b3811d;
@@ -386,6 +482,7 @@ footer {
   border-radius: 8px;
   font-weight: 700;
 }
+
 .type {
   background: #f3f4f6;
   color: #4b5563;
@@ -401,38 +498,49 @@ footer {
 }
 
 .detail-info-grid {
-  display:flex;
-  gap:20px;
+  display: flex;
+  gap: 20px;
   margin-top: 65px;
+  margin-bottom: 30px;
   color: #6b7280;
 }
 
 .detail-actions {
   margin-top: auto;
-  display:flex;
-  gap:12px;
+  display: flex;
+  gap: 30px;
 }
 
 /* Buttons */
-.btn { padding: 10px 14px; border-radius: 10px; border: none; cursor: pointer; font-weight: 600; }
-.btn.primary { background: #c9942d; color: white; box-shadow: 0 6px 18px rgba(201,149,37,0.18); }
-.btn.secondary { background: #60826c; color:#111827; }
-.btn.outline { background: transparent; border:1px solid #e5e7eb; color:#111827; }
+.btn { 
+  padding: 10px 14px; 
+  border-radius: 10px; 
+  border: none;
+  cursor: pointer; 
+  font-weight: bold; 
+  font-size: 15px;
+}
+
+.btn.primary { 
+  background: #c9942d; 
+  color: white; 
+  box-shadow: 0 6px 18px rgba(201,149,37,0.18); 
+}
+
+.btn.secondary { 
+  background: #60826c; 
+  color:#111827; 
+}
+
+.btn.outline { 
+  background: transparent; 
+  border:1px solid #d6d6d6; 
+  color:#111827; 
+}
 
 /* Responsivo */
 @media (max-width: 880px) {
   .detail-card { grid-template-columns: 1fr; }
   .detail-left { order: 1; }
   .detail-right { order: 2; }
-}
-
-.link-button {
-  background: none;
-  border: none;
-  padding: 0;
-  margin-top: 8px;
-  font-size: 11px;
-  color: #444;
-  text-decoration: underline;
-  cursor: pointer;
 }
